Changed project name font size to prevent overflow

--- a/src/style.css
+++ b/src/style.css
@@ -234,7 +234,7 @@ li .todo-name {
 }
 
 li .project-name {
-	font-size: 20px;
+	font-size: clamp(12px, 18px ,20px);
 }
 
 li .todo-description,
